--- a/web/plugin/jquery-ui-1.9.0/css/custom-theme/jquery-ui-1.9.0.ext.css
+++ b/web/plugin/jquery-ui-1.9.0/css/custom-theme/jquery-ui-1.9.0.ext.css
@@ -23,7 +23,8 @@
     width: 98%;
 }
 
-.ui-combobox .ui-icon-triangle-1-s {width: 2px;}
+.ui-combobox input {width: 98%;}
+/*.ui-combobox .ui-icon-triangle-1-s {width: 2px;}*/
 
 .ui-autocomplete { max-height: 250px; overflow-y: auto; overflow-x: hidden;}
 
