--- a/web/css/style.css
+++ b/web/css/style.css
@@ -129,7 +129,7 @@ a.btn_orange{display:inline-block; font-size:14px; font-weight:bold; height:28px
 .lg_wraper{ width:396px; margin:0 auto;}
 .login_box{ position:relative; width:396px; height:301px; overflow:hidden;}
 .login_box div{ position:absolute; left:50px; top:46px;}
-.login_box div input.ipt_txt{ margin-left:40px; border:0 none; height:34px; line-height:34px; width:253px; margin-bottom:24px;_margin-bottom:22px;vertical-align: middle;}
+.login_box div input.ipt_txt{ margin-left:40px; border:0 none; height:32px; line-height:32px;width:245px; margin-bottom:27px;_margin-bottom:24px;vertical-align: middle;font-size: 20px;}
 .login_box div input.ipt_sort{width:141px; float:left; margin-right:15px;}
 .login_box div input.ipt_btn{ margin-left:0; background:#faaa00; height:40px; line-height:40px; width:184px; color:#fff; font-size:16px; font-weight:bold; cursor:pointer;  border:0; margin-right:10px;}
 .login_box div input.ipt_check{vertical-align: middle;margin-right:5px; }
