--- a/web/css/style.css
+++ b/web/css/style.css
@@ -90,7 +90,7 @@ select{ background:url(../images/select_bg.png) no-repeat 95% 6px #fff;border:1p
 .main_search .ipt_btn{ background:#74acc4; border:1px solid #74acc4; color:#fff; cursor:pointer; padding:0 10px;height:26px; line-height:24px;}
 .ipt_date{ width:100px; background:url(../images/date_bg.png) no-repeat 95% center #fff; cursor:pointer;}
 
-.main_form input {color: #202020;border: solid 1px #d2d2d2;_vertical-align: middle;height:28px; line-height:28px; padding:0 3px; width:220px;}
+.main_form input[type=text] {color: #202020;border: solid 1px #d2d2d2;_vertical-align: middle;height:28px; line-height:28px; padding:0 3px; width:220px;}
 .main_form table th{ text-align:right; font-weight:normal; color:#666;}
 .main_form table td{ padding:10px 0; }
 .main_form table td span{ padding-left:10px;}
