--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8,7 +8,7 @@ ul,li,p,dl,dt,dd{ list-style:none;margin:0; padding:0;}
 a,a:hover{ color:#1f1513; text-decoration:none;}
 img{ border:0;}
 input,textarea{ border:1px solid #d2d2d2;_vertical-align: middle; padding:0 3px;}
-select{padding:4px;_vertical-align: middle;}
+select{padding:3px;_vertical-align: middle;}
 .mg_r{ margin-right:10px;}
 a.link_blue{ color:#3298c3;}
 .clearfix:after {content:".";display:block; height:0; clear:both; visibility:hidden;}
@@ -89,18 +89,16 @@ label{ vertical-align:top;}
 
 select{ 
 -webkit-appearance: none;
--webkit-background:url(../images/select_bg.png) no-repeat 95% 6px #fff;
--webkit-border:1px solid #d2d2d2;
--webkit-padding:0 3px;
--webkit-padding-right:20px;
--webkit-height:26px;
-}
-select{ 
--moz-background:url(../images/select_bg.png) no-repeat 95% 6px #fff;
--moz-border:1px solid #d2d2d2;
--moz-padding:0 3px;
--moz-padding-right:20px;
--moz-height:26px;
+background:url(../images/select_bg.png) no-repeat 95% 6px #fff;
+border:1px solid #d2d2d2;
+height:26px;
+min-width:110px;
+
+background:none\9\0;  /* ie 9/10 - for ie9/10 */  
+*background:none; /* ie 6/7 - for ie7 */
+padding-right:#fff\9\0;  /* ie 9/10 - for ie9/10 */  
+*padding-right:#fff; /* ie 6/7 - for ie7 */
+
 }
 
 .main_search input{ height:24px; padding:0 3px; line-height:24px;}
@@ -213,7 +211,7 @@ a.btn_orange{display:inline-block; font-size:14px; font-weight:bold; height:28px
 .main_order_detail .content .order_result table{ border:0;}
 .main_order_detail .content .order_result td{ border:0; background:none; text-align:left;}
 .main_order_detail .content .order_result th{ border:0; background:none;text-align:right; padding:10px;}
-.main_order_detail .content .order_result select{ -moz-margin-right:20px; -webkit-margin-right:20px; -o-margin-right:20px;}
+.main_order_detail .content .order_result select{ margin-right:20px;}
 
 /*发展为会员*/
 .user_accout p label{ width:100px; text-align:right; display:block; float:left; line-height:26px;}
