--- a/web/plugin/jquery-ui-1.9.0/css/custom-theme/jquery-ui-1.9.0.ext.css
+++ b/web/plugin/jquery-ui-1.9.0/css/custom-theme/jquery-ui-1.9.0.ext.css
@@ -107,4 +107,5 @@ background: #EAF4FB url(../../../../css/admin_bg.png) left bottom no-repeat;
 
 .ui-datepicker select.ui-datepicker-month, .ui-datepicker select.ui-datepicker-year {
 width: 40%;
+min-width:10px;
 }
